# flowbuilder

./: .editorconfig  CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MODULAR_ARCHITECTURE.md  PARALLEL_EXECUTION_IMPROVEMENTS.md  PROJECT_STATUS.md  README.md  clippy.toml  rustfmt.toml
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/chronetix-flowbridge/: Cargo.toml
crates/chronetix-flowbridge/src/: contract.rs  convert.rs  inproc.rs  lib.rs  types.rs
docs/: CLEANUP_SUMMARY.md  README.md  advanced-usage.md  ai-collaboration-guide.md  api-reference.md  architecture.md  chronetix-flowbridge-api-contract.md  chronetix-integration-plan.md  distributed-future-vision.md  distributed-interface-design.md  evolution-roadmap.md  expressions.md  frontend-designer-plan-ARCHIVED.md  getting-started.md  index.html  logging-design.md  other copy.html  other.html  phase1-detailed-design.md  quick-start-guide.md  solo-dev-prototype-plan.md  todo.md  trace-features.md  yaml-parameter-formats.md
docs/Chronetix/: FLOWBUILDER_INTEGRATION.md  IMPLEMENTATION_GUIDE.md  INDEX.md  README.md  chronetix-flowbridge-api-contract.md  chronetix-integration-plan.md
docs/Chronetix/examples/: minimal_compile_output.json  minimal_dag.yaml
docs/chronetix/: RESPONSIBILITIES_AND_APIS.md
docs/design/: provider-based-expressions.md
examples/: README.md  advanced_control_flow.rs  basic_usage.rs  feature_test.rs  parallel_execution.rs  subflow_example.rs  trace_example.rs  yaml_runtime_integration.rs
flowbuilder/: Cargo.toml
flowbuilder-context/: Cargo.toml
flowbuilder-context/src/: lib.rs
flowbuilder-core/: Cargo.toml
flowbuilder-core/src/: execution_plan.rs  executor.rs  flow.rs  flow_builder.rs  lib.rs  tests.rs
flowbuilder-logger/: Cargo.toml
flowbuilder-logger/src/: lib.rs
flowbuilder-macros/: Cargo.toml
flowbuilder-macros/src/: lib.rs
flowbuilder-runtime/: Cargo.toml
flowbuilder-runtime/benches/: executor_features.rs
flowbuilder-runtime/src/: enhanced_executor.rs  enhanced_orchestrator.rs  lib.rs  orchestrator.rs  orchestrator_simple.rs  scheduler_simple.rs  tests.rs
flowbuilder-runtime/src/parallel/: mod.rs  tests.rs
flowbuilder-yaml/: Cargo.toml
flowbuilder-yaml/examples/: dynamic_yaml_demo.rs  yaml_runtime_integration.rs
flowbuilder-yaml/src/: config.rs  config_parser.rs  executor.rs  executor_new.rs  expression.rs  lib.rs  loader.rs  parser.rs  runtime_integration.rs
flowbuilder-yaml/tests/: expression_providers.rs  integration_test.rs
flowbuilder/examples/: action_demo.rs  advanced_parallel_demo.rs  flow_poc.rs  modular_example.rs  new_architecture_demo.rs  parallel_demo.rs  parallel_test.rs  scheduler_orchestrator_demo.rs  simple_example.rs
flowbuilder/src/: lib.rs
src/: builder.rs  context.rs  core.rs  lib.rs  main.rs  step.rs
src/logger/: mod.rs
src/tests/: flow_test.rs
template/: workflow.yaml
tests/: advanced_features_tests.rs  control_flow_tests.rs  flow_test.rs  simplified_tests.rs  trace_tests.rs
wit/flow/: blob.wit  bus.wit  common.wit  metrics.wit  stream.wit
