[package]
name = "flowbuilder"
version = "0.0.2"
edition = "2024"
description = "An async flow orchestration framework with conditional execution and context sharing."
authors = ["Thne"]
keywords = ["flow", "workflow", "async", "rust"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ThneS/flowbuilder.git"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "sync",
    "time",
] }
uuid = { version = "1.0", features = ["v4"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]

[lib]

[features]
default = ["mvp"]
mvp = []

strong = ["logger"]

logger = ["tracing"]
