[workspace]
members = [
    "flowbuilder-core",
    "flowbuilder-context",
    "flowbuilder-runtime",
    "flowbuilder-yaml",
    "flowbuilder",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "sync",
    "time",
] }
uuid = { version = "1.0", features = ["v4"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
futures = "0.3.31"
regex = "1"
