[package]
name = "flowbuilder-context"
version = "0.1.1"
edition = "2021"
description = "Context management for FlowBuilder"
authors = ["Thne"]
license = "Apache-2.0"
keywords = ["flow", "context", "async", "rust"]
categories = ["asynchronous", "data-structures"]
repository = "https://github.com/ThneS/flowbuilder.git"
homepage = "https://github.com/ThneS/flowbuilder"
documentation = "https://docs.rs/flowbuilder-context"

[dependencies]
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = []
logger = ["dep:tracing"]
