[package]
name = "flowbuilder-core"
version = "0.0.2"
edition = "2021"
description = "Core flow building functionality for FlowBuilder"
authors = ["Thne"]
license = "Apache-2.0"

[dependencies]
flowbuilder-context = { path = "../flowbuilder-context" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
runtime = []
