[package]
name = "flowbuilder-core"
version = "0.1.0"
edition = "2021"
description = "Core flow building functionality for FlowBuilder"
authors = ["Thne"]
license = "Apache-2.0"
keywords = ["flow", "workflow", "async", "rust"]
categories = ["asynchronous", "development-tools"]
repository = "https://github.com/ThneS/flowbuilder.git"
homepage = "https://github.com/ThneS/flowbuilder"
documentation = "https://docs.rs/flowbuilder-core"

[dependencies]
flowbuilder-context = "0.1.0"
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
runtime = []
