[package]
name = "flowbuilder-runtime"
version = "0.1.0"
edition = "2021"
description = "Advanced runtime features for FlowBuilder"
authors = ["Thne"]
license = "Apache-2.0"
keywords = ["flow", "runtime", "async", "rust"]
categories = ["asynchronous", "development-tools"]
repository = "https://github.com/ThneS/flowbuilder.git"
homepage = "https://github.com/ThneS/flowbuilder"
documentation = "https://docs.rs/flowbuilder-runtime"

[dependencies]
flowbuilder-core = "0.1.0"
flowbuilder-context = "0.1.0"
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = { workspace = true, optional = true }
