[package]
name = "flowbuilder-yaml"
version = "0.0.2"
edition = "2021"
description = "YAML/JSON dynamic flow loading for FlowBuilder"
authors = ["FlowBuilder Team"]
license = "MIT"
repository = "https://github.com/flowbuilder/flowbuilder"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"

# FlowBuilder 依赖
flowbuilder-core = { path = "../flowbuilder-core" }
flowbuilder-context = { path = "../flowbuilder-context" }
flowbuilder-runtime = { path = "../flowbuilder-runtime" }

[features]
default = []
full = ["runtime"]
runtime = []
