[package]
name = "flowbuilder-yaml"
version = "0.1.0"
edition = "2021"
description = "YAML/JSON dynamic flow loading for FlowBuilder"
authors = ["Thne"]
license = "Apache-2.0"
keywords = ["flow", "yaml", "json", "async", "rust"]
categories = ["asynchronous", "parsing"]
repository = "https://github.com/ThneS/flowbuilder.git"
homepage = "https://github.com/ThneS/flowbuilder"
documentation = "https://docs.rs/flowbuilder-yaml"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"

# FlowBuilder 依赖
flowbuilder-core = "0.1.0"
flowbuilder-context = "0.1.0"
flowbuilder-runtime = "0.1.0"

[features]
default = []
full = ["runtime"]
runtime = []
