[package]
name = "flowbuilder-yaml"
version = "0.1.1"
edition = "2021"
description = "YAML/JSON dynamic flow loading for FlowBuilder"
authors = ["Thne"]
license = "Apache-2.0"
keywords = ["flow", "yaml", "json", "async", "rust"]
categories = ["asynchronous", "parsing"]
repository = "https://github.com/ThneS/flowbuilder.git"
homepage = "https://github.com/ThneS/flowbuilder"
documentation = "https://docs.rs/flowbuilder-yaml"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

# FlowBuilder 依赖
flowbuilder-core = { version = "0.1.1", path = "../flowbuilder-core" }
flowbuilder-context = { version = "0.1.1", path = "../flowbuilder-context" }
flowbuilder-runtime = { version = "0.1.1", path = "../flowbuilder-runtime", optional = true }

[features]
default = []
# 运行时支持
runtime = ["flowbuilder-runtime"]
# 性能度量（透传到 runtime）
perf-metrics = ["runtime", "flowbuilder-runtime/perf-metrics"]
# 全部（当前等价于 runtime + perf-metrics）
full = ["runtime", "perf-metrics"]
