[package]
name = "flowbuilder"
version = "0.1.1"
edition = "2021"
description = "An async flow orchestration framework with conditional execution and context sharing."
authors = ["Thne"]
keywords = ["flow", "workflow", "async", "rust"]
categories = ["asynchronous", "development-tools"]
readme = "../README.md"
license = "Apache-2.0"
repository = "https://github.com/ThneS/flowbuilder.git"
homepage = "https://github.com/ThneS/flowbuilder"
documentation = "https://docs.rs/flowbuilder"

[dependencies]
flowbuilder-core = { version = "0.1.1", path = "../flowbuilder-core" }
flowbuilder-context = { version = "0.1.1", path = "../flowbuilder-context" }
flowbuilder-runtime = { version = "0.1.1", path = "../flowbuilder-runtime", optional = true, features = [] }
flowbuilder-yaml = { version = "0.1.1", path = "../flowbuilder-yaml", optional = true }

# Re-export workspace dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
chronetix-flowbridge = { path = "../crates/chronetix-flowbridge", features = ["inproc"] }
serde_json = { workspace = true }

[features]
# 默认启用核心 + YAML(含运行时) 方便示例直接编译
default = ["core", "yaml-runtime"]
core = ["flowbuilder-core/default"]
runtime = ["dep:flowbuilder-runtime", "flowbuilder-core/runtime"]
yaml = ["dep:flowbuilder-yaml"]
# 组合：同时启用 yaml + runtime 并确保 yaml crate 的 runtime 子特性开启
yaml-runtime = ["yaml", "runtime", "flowbuilder-yaml/runtime"]
# 透传 runtime 子特性
perf-metrics = ["runtime", "flowbuilder-runtime/perf-metrics"]
parallel = ["runtime", "flowbuilder-runtime/parallel"]
retry = ["runtime", "flowbuilder-runtime/retry"]
detailed-logging = ["runtime", "flowbuilder-runtime/detailed-logging"]

[[example]]
name = "new_architecture_demo"
path = "examples/new_architecture_demo.rs"
required-features = ["yaml-runtime"]

[[example]]
name = "action_demo"
path = "examples/action_demo.rs"
required-features = ["runtime"]

[[example]]
name = "flow_poc"
path = "examples/flow_poc.rs"
